Fixed z-index for selectpicker in exercises page

--- a/themes/esense/assets/scss/_custom-select.scss
+++ b/themes/esense/assets/scss/_custom-select.scss
@@ -81,3 +81,8 @@
     color: #252525;
     font-style: normal;
 }
+
+.exercises-select {
+    position: relative !important;
+    z-index: 1000 !important;
+}
